[gd_scene load_steps=30 format=3 uid="uid://biukrtneh1jlv"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_47yca"]
[ext_resource type="Texture2D" uid="uid://bp63r0qdaoagx" path="res://assets/textures/256square.png" id="2_vtb0o"]
[ext_resource type="Texture2D" uid="uid://do3wxnbfnw8a0" path="res://assets/textures/main_menu/twitter/robbobin-pfp.png" id="3_2c2te"]
[ext_resource type="PackedScene" uid="uid://lxoiljnwu1ym" path="res://scenes/entities/cursor.tscn" id="3_hkolo"]
[ext_resource type="Texture2D" uid="uid://dr644tp4t8s5h" path="res://assets/textures/main_menu/twitter/robbobin-pfp-pressed.png" id="4_2rl7m"]
[ext_resource type="Texture2D" uid="uid://culek51ye77uj" path="res://assets/textures/main_menu/twitter/robbobin-pfp-hover.png" id="5_v17fh"]
[ext_resource type="Texture2D" uid="uid://bf4h5oncybiuc" path="res://assets/textures/main_menu/start/quit-normal.png" id="6_h3n7l"]
[ext_resource type="FontFile" uid="uid://b887x2t4ygy6d" path="res://assets/fonts/Aliens Among Us.ttf" id="6_oqqao"]
[ext_resource type="Texture2D" uid="uid://cg3qoyr8w2xna" path="res://assets/textures/main_menu/start/quit-press.png" id="7_vgq37"]
[ext_resource type="Texture2D" uid="uid://tjuxho756gr8" path="res://assets/textures/main_menu/start/quit-hover.png" id="8_8wjm1"]
[ext_resource type="Texture2D" uid="uid://0lklaeubig7i" path="res://assets/textures/main_menu/start/start-normal.png" id="9_yfqag"]
[ext_resource type="Texture2D" uid="uid://dfa0q2vkso8pb" path="res://assets/textures/main_menu/start/start-press.png" id="10_y2xr5"]
[ext_resource type="Texture2D" uid="uid://4yfkmobk4ey6" path="res://assets/textures/main_menu/start/start-hover.png" id="11_xumbs"]
[ext_resource type="Texture2D" uid="uid://bdum5ysibjity" path="res://assets/textures/main_menu/start/audio-slider.png" id="14_7gbwn"]
[ext_resource type="Texture2D" uid="uid://d2cpx8w6msrth" path="res://assets/textures/main_menu/start/audio-icon.png" id="14_bg5ai"]
[ext_resource type="Script" path="res://scripts/volume_slider.gd" id="15_3yf8k"]
[ext_resource type="AudioStream" uid="uid://kh5wvx1j5dw2" path="res://assets/audio/cursor/click-on.wav" id="16_nj36g"]
[ext_resource type="Texture2D" uid="uid://d3msvoj8wcvnw" path="res://assets/textures/main_menu/start/continue-normal.png" id="17_rx1su"]
[ext_resource type="Texture2D" uid="uid://1uerunr0j4e4" path="res://assets/textures/main_menu/start/continue-press.png" id="18_hu22n"]
[ext_resource type="Texture2D" uid="uid://8uomgsxrauf2" path="res://assets/textures/main_menu/start/continue-hover.png" id="19_v0jx1"]
[ext_resource type="Texture2D" uid="uid://cwagv23xov8tg" path="res://assets/textures/main_menu/start/menu-normal.png" id="21_xwy6r"]
[ext_resource type="Texture2D" uid="uid://bqqq1s6gbqyp0" path="res://assets/textures/main_menu/start/menu-press.png" id="22_21yme"]
[ext_resource type="Texture2D" uid="uid://yl7cmvnf8tda" path="res://assets/textures/main_menu/start/menu-hover.png" id="22_vaqyh"]
[ext_resource type="Script" path="res://scripts/spintest.gd" id="23_33se8"]
[ext_resource type="Texture2D" uid="uid://dxim8163hpyd3" path="res://assets/textures/main_menu/start/time.png" id="23_qyc12"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bd8ol"]

[sub_resource type="Theme" id="Theme_4qbyu"]
default_font = ExtResource("6_oqqao")
Button/font_sizes/font_size = 80
Button/fonts/font = ExtResource("6_oqqao")

[sub_resource type="Theme" id="Theme_tp6a5"]
VSlider/icons/grabber = ExtResource("14_bg5ai")
VSlider/icons/grabber_highlight = ExtResource("14_bg5ai")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jg2a7"]
bg_color = Color(0.996094, 0.394531, 0.15625, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_47yca")

[node name="BgTexture" type="Sprite2D" parent="."]
modulate = Color(0.901961, 0.901961, 0.901961, 1)
material = SubResource("CanvasItemMaterial_bd8ol")
position = Vector2(968, 576)
scale = Vector2(7.64062, 7.64062)
texture = ExtResource("2_vtb0o")

[node name="MenuButton" type="TextureButton" parent="."]
offset_left = 1746.0
offset_top = 13.0
offset_right = 1996.0
offset_bottom = 163.0
scale = Vector2(0.621749, 0.621749)
texture_normal = ExtResource("21_xwy6r")
texture_pressed = ExtResource("22_21yme")
texture_hover = ExtResource("22_vaqyh")

[node name="MenuMain" type="CanvasGroup" parent="."]
process_mode = 3
visible = false

[node name="StartButton" type="TextureButton" parent="MenuMain"]
offset_left = 610.0
offset_top = 492.0
offset_right = 1310.0
offset_bottom = 792.0
texture_normal = ExtResource("9_yfqag")
texture_pressed = ExtResource("10_y2xr5")
texture_hover = ExtResource("11_xumbs")

[node name="Quit" type="TextureButton" parent="MenuMain"]
offset_left = 837.0
offset_top = 820.0
offset_right = 1087.0
offset_bottom = 970.0
texture_normal = ExtResource("6_h3n7l")
texture_pressed = ExtResource("7_vgq37")
texture_hover = ExtResource("8_8wjm1")

[node name="Robbobin" type="Node2D" parent="MenuMain"]
position = Vector2(1751, 199)

[node name="RobbobinButton" type="TextureButton" parent="MenuMain/Robbobin"]
offset_left = -147.0
offset_top = -177.0
offset_right = 143.0
offset_bottom = 113.0
texture_normal = ExtResource("3_2c2te")
texture_pressed = ExtResource("4_2rl7m")
texture_hover = ExtResource("5_v17fh")

[node name="RobbobinShadow" type="Label" parent="MenuMain/Robbobin"]
offset_left = -110.0
offset_top = 113.0
offset_right = 120.0
offset_bottom = 221.0
theme = SubResource("Theme_4qbyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Robbobin"
horizontal_alignment = 1

[node name="RobbobinFace" type="Label" parent="MenuMain/Robbobin/RobbobinShadow"]
layout_mode = 0
offset_left = -9.0
offset_top = -9.0
offset_right = 221.0
offset_bottom = 99.0
theme = SubResource("Theme_4qbyu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Robbobin"
horizontal_alignment = 1

[node name="VolumeControls" type="Sprite2D" parent="MenuMain"]
position = Vector2(120, 520)
texture = ExtResource("14_7gbwn")

[node name="VolumeSlider" type="VSlider" parent="MenuMain/VolumeControls"]
offset_left = -35.0
offset_top = -192.0
offset_right = 36.0
offset_bottom = 183.0
theme = SubResource("Theme_tp6a5")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_jg2a7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_jg2a7")
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("15_3yf8k")
bus_name = "Master"

[node name="ExampleSound" type="AudioStreamPlayer2D" parent="MenuMain/VolumeControls/VolumeSlider"]
stream = ExtResource("16_nj36g")

[node name="MenuMini" type="CanvasGroup" parent="."]
process_mode = 3
visible = false

[node name="WhiteLeft2" type="Sprite2D" parent="MenuMini"]
modulate = Color(0, 0, 0, 0.45098)
position = Vector2(969, 563)
scale = Vector2(7.71094, 4.64062)
texture = ExtResource("2_vtb0o")

[node name="WhiteLeft" type="Sprite2D" parent="MenuMini"]
position = Vector2(78, 563)
scale = Vector2(0.75, 4.64062)
texture = ExtResource("2_vtb0o")

[node name="WhiteRight" type="Sprite2D" parent="MenuMini"]
position = Vector2(1715.5, 563)
scale = Vector2(1.82422, 4.64062)
texture = ExtResource("2_vtb0o")

[node name="Continue" type="TextureButton" parent="MenuMini"]
offset_left = 1530.0
offset_top = 715.0
offset_right = 1880.0
offset_bottom = 865.0
texture_normal = ExtResource("17_rx1su")
texture_pressed = ExtResource("18_hu22n")
texture_hover = ExtResource("19_v0jx1")

[node name="Menu" type="TextureButton" parent="MenuMini"]
offset_left = 1630.0
offset_top = 860.0
offset_right = 1880.0
offset_bottom = 1010.0
scale = Vector2(0.621749, 0.621749)
texture_normal = ExtResource("6_h3n7l")
texture_pressed = ExtResource("7_vgq37")
texture_hover = ExtResource("8_8wjm1")

[node name="Robbobin" type="Node2D" parent="MenuMini"]
position = Vector2(1704, 531)

[node name="RobbobinButton" type="TextureButton" parent="MenuMini/Robbobin"]
offset_left = -147.0
offset_top = -177.0
offset_right = 143.0
offset_bottom = 113.0
texture_normal = ExtResource("3_2c2te")
texture_pressed = ExtResource("4_2rl7m")
texture_hover = ExtResource("5_v17fh")

[node name="RobbobinShadow" type="Label" parent="MenuMini/Robbobin"]
offset_left = -110.0
offset_top = 113.0
offset_right = 120.0
offset_bottom = 221.0
theme = SubResource("Theme_4qbyu")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Robbobin"
horizontal_alignment = 1

[node name="RobbobinFace" type="Label" parent="MenuMini/Robbobin/RobbobinShadow"]
layout_mode = 0
offset_left = -9.0
offset_top = -9.0
offset_right = 221.0
offset_bottom = 99.0
theme = SubResource("Theme_4qbyu")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Robbobin"
horizontal_alignment = 1

[node name="VolumeControls" type="Sprite2D" parent="MenuMini"]
position = Vector2(84, 520)
texture = ExtResource("14_7gbwn")

[node name="VolumeSlider" type="VSlider" parent="MenuMini/VolumeControls"]
offset_left = -35.0
offset_top = -192.0
offset_right = 36.0
offset_bottom = 183.0
theme = SubResource("Theme_tp6a5")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_jg2a7")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_jg2a7")
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("15_3yf8k")
bus_name = "Master"

[node name="ExampleSound" type="AudioStreamPlayer2D" parent="MenuMini/VolumeControls/VolumeSlider"]
stream = ExtResource("16_nj36g")

[node name="CursorRoot" parent="." instance=ExtResource("3_hkolo")]
process_mode = 3

[node name="Time" type="Sprite2D" parent="."]
position = Vector2(41, 40)
texture = ExtResource("23_qyc12")
script = ExtResource("23_33se8")

[connection signal="pressed" from="MenuButton" to="." method="ToggleMiniMenu"]
[connection signal="pressed" from="MenuMain/StartButton" to="." method="StartGame"]
[connection signal="pressed" from="MenuMain/Quit" to="." method="QuitGame"]
[connection signal="pressed" from="MenuMain/Robbobin/RobbobinButton" to="." method="OpenTwitter"]
[connection signal="pressed" from="MenuMini/Continue" to="." method="ToggleMiniMenu"]
[connection signal="pressed" from="MenuMini/Menu" to="." method="MainMenu"]
[connection signal="pressed" from="MenuMini/Robbobin/RobbobinButton" to="." method="OpenTwitter"]
